--- a/Week1/js-exercises/ex4-whatsTheTime.html
+++ b/Week1/js-exercises/ex4-whatsTheTime.html
@@ -1,4 +1,19 @@
-<!--
-  1. Create a basic html file
-  2. Add a script tag that links to the ex4-whatsTheTime.js
--->
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Time</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="">
+</head>
+
+<body>
+  <h1>what time is it?</h1>
+  <h2>TIME</h2>
+  <script src="ex4-whatsTheTime.js" async defer></script>
+</body>
+
+</html>
