week 2 homework js-exercises and pomodoro clock project added

--- a/Week2/js-exercises/ex5-myFavoriteHobbies.html
+++ b/Week2/js-exercises/ex5-myFavoriteHobbies.html
@@ -1,5 +1,11 @@
 <html>
-
+    <head>
+        <title>Hobbies</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+<body>
+    <script src="ex5-myFavoriteHobbies.js"></script>
+</body>
 <!-- your html code goes in here -->
 
 </html>
