edit based on Bas Hoogendijk's suggestion

--- a/Week1/js-exercises/ex1-bookList.html
+++ b/Week1/js-exercises/ex1-bookList.html
@@ -4,7 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Book List</title>
+  <title> Book List</title>
+  <style>
+    ul {
+      display: flex;
+      justify-content: flex-start;
+    }
+
+    p {
+      font-size: 1.3rem;
+    }
+
+    li {
+      list-style: none;
+      padding: 1rem;
+      flex-basis: 25%;
+    }
+
+    img {
+      width: 50%;
+    }
+  </style>
 </head>
 
 <body>
