--- a/Week1/js-exercises/ex2-aboutMe.html
+++ b/Week1/js-exercises/ex2-aboutMe.html
@@ -28,10 +28,10 @@
     favFood.innerText = "Kitfo";
     const homeTown = document.getElementById('hometown');
     homeTown.innerText = "Addis Abeba";
-    let li = document.querySelectorAll('li');
+    let listItems = document.querySelectorAll('li');
     //iterate through lists and add a class to each of them
-    for (let i = 0; i < li.length; i++) {
-      li[i].classList = 'list-item';
+    for (let i = 0; i < listItems.length; i++) {
+      listItems[i].classList = 'list-item';
     }
     const myImage = document.createElement('img'); // create image element
     myImage.src = 'https://ca.slack-edge.com/T0EJTUQ87-U0197LVAL00-8d10b902defd-512'; // add a source to the image 
