--- a/Week3/project/index.html
+++ b/Week3/project/index.html
@@ -2,14 +2,52 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tip Calculator</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<title>Tip Calculator</title>
 </head>
 
 <body>
-  <div id="app"></div>
-  <script src="index.js"></script>
+	<div class="container">
+		<div class="none"></div>
+		<div id="app" class="draggable">
+			<div id="apptitle" class="move"></div>
+			<div class="input-price">
+				<label for="">How much was your bill?</label>
+				<span class="currency-type"> $</span>
+				<input type="text" id="price">
+			</div>
+			<div class="service-dropdown">
+				<label for="">How was your service?</label>
+				<select name="choose " id="service">
+					<option value="">Choose an option</option>
+					<option value="30">30% - Outstanding</option>
+					<option value="20">20% - Good</option>
+					<option value="15">15% - It was OK</option>
+					<option value="10">10% - Bad</option>
+					<option value="5">5% - Terrible</option>
+				</select>
+			</div>
+			<div class="no-people">
+				<label for="people">How many people are sharing the bill?</label>
+				<input id="people" class="people-num" type="text" value="1">
+			</div>
+			<div class="tip-calc">
+				<button id="button-calculate" class="claculate-btn">Calculate</button>
+				<p></p>
+			</div>
+		</div>
+		<div class="error-container">
+			<div id="error" class="draggable">
+				<div id="error-title" class="move">Information</div>
+				<p id="error-text">Fill in all the fields!</p>
+				<button id="error-btn" class="error-button">OK</button>
+			</div>
+		</div>
+	</div>
+
+	<script src="index.js"> </script>
 </body>
 
 </html>
