--- a/Week2/project/index.html
+++ b/Week2/project/index.html
@@ -9,22 +9,22 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ=="
     crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Pomodoro Clock</title>
-  </head>
+</head>
 
 <body>
   <h1>Pomodoro Clock</h1>
   <h2>Session Length</h2>
   <div class="select">
-    <button id="left-arrow"'><i class="arrow down icon"></i></button>
-    <h1 id="number" class="number-to-manipulate">25</h1>
-    <button id="right-arrow"><i class="arrow up icon"></i></button>
+    <button id="decrease-time"'><i class="arrow down icon"></i></button>
+    <h1 id="session-length" class="number-to-manipulate">25</h1>
+    <button id="increase-time"><i class="arrow up icon"></i></button>
   </div>
 
   <div id="app">
     <h1>Session</h1>
-    <h2 class="number-to-manipulate">25:00</h2>
+    <h2 id="timer" class="number-to-manipulate">25:00</h2>
   </div>
   <div class="timer">
     <i class="play icon"></i>
